  type of exception by the SFTP plugin in Obnam.

* `obnam-benchmark` can now use an installed version of larch.
  Patch by Lars Kruse.

* Obnam has been ported to FreeBSD by Itamar Turner-Trauring
  of HybridCluster.

* Backup progress reporting now reports scanned file data, not just
  backed up file data. This will hopefully be less confusing to people.

Bug fixes:

* Fix "obnam list-toplevels" so it doesn't give an error when it's
  unable to read the per-client directory of another client, when
  encryption is used. Fix by Lars Kruse.

* Fix the encryption plugin to give a better error message when it
  looks for client directories but fails to find them. Fix by
  Lars Kruse.

* "obnam list-toplevels" got confused when the repository contained
  extra files, such as "lock" (left there by a previous, crashed Obnam
  run). It no longer does. Fix by Lars Kruse.

* The SFTP plugin now handles another error code (EACCESS) when writing
  a file and the directory it should go into not existing. Patch by
  Armin Größlinger.

* Obnam's manual page now explains about breaking long logical lines
  into multiple physical ones.

Version 1.5, released 2013-08-08
--------------------------------

Bug fixes:

* Terminal progress reporting now updated only every 0.1 seconds,
  instead of 0.01 seconds, to reduce terminal emulator CPU usage.
  Reported by Neal Becker.
* Empty exclude patterns are ignored. Previously, a configuration file
  line such as "exclude = foo, bar," (note trailing comma) would result
  in an empty pattern, which would match everything, and therefore
  nothing would be backed up. Reported by Sharon Kimble.
* A FUSE plugin to access (read-only) data from the backup repository
  has been added. Written by Valery Yundin.

Version 1.4, released 2013-03-16
--------------------------------

* The``ls` command now takes filenames as (optional) arguments, instead
  of a list of generations. Based on patch by Damien Couroussé.